backend&plugin: fix: make sure unread status is correctly
